# Wargaming-XML-Parser-Rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml
docs/: validator_usage.md
example-data/: Tts Ork game teams.rosz  Tts game teams .json  Tts game teams.ros
examples/: validator_example.rs
src/: lib.rs  main.rs
src/Tests/: decompression_tests.rs  mod.rs  parse_tokens_tests.rs  roster_validation_tests.rs  validator_tests.rs
src/Tools/: decompression.rs  lexical_analysis.rs  mod.rs  parse_tokens.rs  validator.rs
src/models/: Constraint.rs  ConstraintType.rs  ValidationResult.rs  XmlDocument.rs  XmlElement.rs  XmlNode.rs  mod.rs
