[package]
name = "xml-parser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for parsing XML files"
license = "MIT"
repository = "https://github.com/yourusername/xml-parser"
keywords = ["xml", "parser", "battlescribe", "warhammer"]
categories = ["parsing", "text-processing"]

[dependencies]
# Compression/Decompression
zip = "0.6"

# Error handling
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "xml_parser"
path = "src/lib.rs"

[[bin]]
name = "xml-parser-cli"
path = "src/main.rs" 